# gbt-pipeline

./: .gitignore  Jenkinsfile  Jenkinsfile.groovy  LICENSE.txt  README  README.md  README.rst  RunAllUnitTests  calBand.pro  calBandRef.pro  calScanInt2.pro  calibrateBeam2.pro  compilePipeline.pro  createPipelineEnv.bash  getTau.pro  index.html  install.py  kfpa_pipe.pro  liebeTau.pro  m81Map.pro  mapCal2Beam.pro  moleculefind.pro  nameDc.pro  nameMap.pro  opacityO2.pro  params.json  pipeline_examples  pyproject.toml  refbeamposition.pro  referenceBeam2.pro  reqs.txt  requirements.txt  scaleIntsRef.pro  setTSky.pro  setup.py  tatm.pro  tsysair.pro
Documentation/: calibration and mapping plan.tex  pipeline_description.tex
contrib/: accumNH3-22.py  aipsNumber  imNH3-11.py  imageDefault.py  imageW51.py  pipeW51-1122  sumLine.py
doc/: MappingPipelineUG.docx  b2_reduce_1.pro  basekeep_b2.pro  calibration and mapping plan.tex  pipeline-report.tex
frequency-switched/: README
idlToSdfits/: MATHCNST.H  OFFLINEDIR.H  angleRange.c  angularDistance.c  calcAveRmsRange.c  calcRMS.c  dateObs2DMjd.c  fgauss.c  findFitsTable.c  findScanInfo.c  findTableExtension.c  gLatLon2RaDec.c  gaussj.c  gbtAntenna.h  gbtGo.h  gbtHolography.h  gbtLo.h  gbtSpectrometer.h  inIntList.c  loadSpecIdl.c  ludcmp.c  makefile  median4.c  median5.c  medianVectors.c  mrqcof.c  quickPlot.c  savgol.c  smoothVector.c  srclist.c  str2mjd.c  str2rad.c  time2str.c  today2mjd.c  velocities.c
position-switched/: README  aveDcs.pro  calBand.pro  calBandRef.pro  calBandRef.py  check_for_sdfits_file.pro  do_m81.sh  (+63 more)
(+337 files in other folders)
